Fix GameWorldTests.